--- a/index.html
+++ b/index.html
@@ -1,59 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Formulario y Resumen</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Users</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Formulario</h1>
-    <form id="dataForm">
-        <label>Nombre:</label><br>
-        <input type="text" id="name"><br><br>
+    <h1>Usuarios</h1>
 
-        <label>Edad:</label><br>
-        <input type="number" id="age"><br><br>
-
-        <label>Lugar de trabajo:</label><br>
-        <input type="text" id="workplace"><br><br>
-
-        <button type="button" onclick="generateTable()">Enviar</button>
+    <!-- Formulario para agregar un usuario -->
+    <form id="userForm">
+        <input type="text" id="name" placeholder="Nombre" required />
+        <input type="number" id="age" placeholder="Edad" required />
+        <input type="text" id="workplace" placeholder="Trabajo" required />
+        <button type="submit">Agregar Usuario</button>
     </form>
 
-    <h2>Resumen</h2>
-    <table id="summaryTable">
-        <tr>
-            <th>Campo</th>
-            <th>Valor</th>
-        </tr>
-        <tr>
-            <td>Nombre</td>
-            <td id="nameValue"></td>
-        </tr>
-        <tr>
-            <td>Edad</td>
-            <td id="ageValue"></td>
-        </tr>
-        <tr>
-            <td>Lugar de trabajo</td>
-            <td id="workplaceValue"></td>
-        </tr>
+    <!-- Tabla para mostrar datos -->
+    <table id="summaryTable" border="1">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Edad</th>
+                <th>Trabajo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Datos se llenarán dinámicamente -->
+        </tbody>
     </table>
 
     <script>
-        function generateTable() {
-            var name = document.getElementById('name').value;
-            var age = document.getElementById('age').value;
-            var workplace = document.getElementById('workplace').value;
+        const databaseURL = "https://prueba-984f4-default-rtdb.firebaseio.com/";
+
+        // Función para cargar datos desde la base de datos y mostrarlos
+        const loadSummary = async () => {
+            try {
+                const response = await fetch(`${databaseURL}/users.json`);
+                if (!response.ok) throw new Error(`Error en la solicitud: ${response.status}`);
+                const data = await response.json();
+
+                const tableBody = document.querySelector("#summaryTable tbody");
+                tableBody.innerHTML = ""; // Limpiar contenido previo
+
+                if (data) {
+                    for (const key in data) {
+                        const user = data[key];
+                        const row = `
+                            <tr>
+                                <td>${user.name}</td>
+                                <td>${user.age}</td>
+                                <td>${user.workplace}</td>
+                            </tr>`;
+                        tableBody.innerHTML += row;
+                    }
+                } else {
+                    tableBody.innerHTML = "<tr><td colspan='3'>No hay datos para mostrar.</td></tr>";
+                }
+            } catch (error) {
+                console.error("Error al cargar los datos:", error);
+                alert(`Error al cargar los datos: ${error.message}`);
+            }
+        };
+
+        // Función para guardar datos en la base de datos
+        const saveData = async (name, age, workplace) => {
+            try {
+                const newUser = { name, age, workplace };
+                const response = await fetch(`${databaseURL}/users.json`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(newUser)
+                });
+
+                if (!response.ok) throw new Error(`Error al guardar los datos: ${response.status}`);
+                alert("Datos guardados correctamente.");
+                loadSummary(); // Recargar la tabla con los nuevos datos
+            } catch (error) {
+                console.error("Error al guardar los datos:", error);
+                alert(`Error al guardar los datos: ${error.message}`);
+            }
+        };
+
+        // Manejo del formulario para guardar un usuario
+        document.getElementById("userForm").addEventListener("submit", (event) => {
+            event.preventDefault(); // Evitar recarga de la página
+            const name = document.getElementById("name").value;
+            const age = parseInt(document.getElementById("age").value, 10);
+            const workplace = document.getElementById("workplace").value;
 
             if (name && age && workplace) {
-                document.getElementById('nameValue').innerText = name;
-                document.getElementById('ageValue').innerText = age;
-                document.getElementById('workplaceValue').innerText = workplace;
-                document.getElementById('summaryTable').style.display = 'table';
+                saveData(name, age, workplace);
+                document.getElementById("userForm").reset(); // Limpiar el formulario
             } else {
-                alert('Por favor, completa todos los campos.');
+                alert("Por favor, completa todos los campos.");
             }
-        }
+        });
+
+        // Cargar datos al iniciar la página
+        loadSummary();
     </script>
 </body>
 </html>
